cmake_minimum_required(VERSION 3.22)
project(cmakeproject)
set(SRC_FILES 
    main.cpp 
    src/calc.cpp)
# message(STATUS "SRC File has &{SRC_FILES}")   
# message("path is  &{CMAKE_SOURCE_DIR}")    
# if(EXISTS &{CMAKE_SOURCE_DIR}/main.cpp)
#     message("file exists")
# else()
# message(FATAL_ERROR"file not exists")
# endif()
add_subdirectory(${CMAKE_SOURCE_DIR}/lib)
add_executable(cmakebinary &{SRC_FILES})
target_include_directories(cmakebinary PUPLIC include/ lib/)
target_link_libraries(cmakebinary PUPLIC wifi_lib)